# simple-platformer

./: .clang-format  .clang-tidy  CMakeLists.txt
.github/workflows/: build-project.yaml  clang-format.yaml  static-analysis.yaml
scripts/: clang-format.sh  clang-tidy.sh  configure.sh
src/: CMakeLists.txt  main.c
